# reposcope

./: README.md  context.txt  pyproject.toml
.github/workflows/: python-package.yml
src/reposcope/: __init__.py  cli.py  profiles.py
tests/: test_cli.py
