[project]
name = "reposcope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AlekseiShevkoplias", email = "shevshelles@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
reposcope = "reposcope.__main__:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
